force-app/main/default/objects/Customer_Information__c/Customer_Information__c.object-meta.xml
<CustomObject>
    <description>客户信息</description>
    <label>Customer Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Customer Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>