force-app/main/default/objects/Customer_Information__c/fields/Actual_Sales_Income_Ratio_22_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Income_Ratio_22_Year__c</fullName>
    <label>22 Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>