force-app/main/default/objects/Customer_Information__c/fields/Annual_sales_scale__c.field-meta.xml
<CustomField>
    <fullName>Annual_sales_scale__c</fullName>
    <label>Annual sales scale ($10K)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>