force-app/main/default/objects/Customer_Information__c/fields/Channel_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Level__c</fullName>
    <label>Channel Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>