force-app/main/default/objects/Customer_Information__c/fields/Cooperation_Level__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Level__c</fullName>
    <label>Cooperation Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>