force-app/main/default/objects/Customer_Information__c/fields/Cooperation_Time__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Time__c</fullName>
    <label>Cooperation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>