force-app/main/default/objects/Customer_Information__c/fields/Cooperative_Brand__c.field-meta.xml
<CustomField>
    <fullName>Cooperative_Brand__c</fullName>
    <label>Cooperative Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>