force-app/main/default/objects/Customer_Information__c/fields/Customer_Management_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management_Name__c</fullName>
    <label>Customer Management Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>