force-app/main/default/objects/Customer_Information__c/fields/Industry_Position__c.field-meta.xml
<CustomField>
    <fullName>Industry_Position__c</fullName>
    <label>Industry Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>