force-app/main/default/objects/Customer_Information__c/fields/Industry_Rank__c.field-meta.xml
<CustomField>
    <fullName>Industry_Rank__c</fullName>
    <label>Industry Rank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>