force-app/main/default/objects/Customer_Information__c/fields/Market_share_in_customer_s_home_country__c.field-meta.xml
<CustomField>
    <fullName>Market_share_in_customer_s_home_country__c</fullName>
    <label>Market share in customer&apos;s home country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>