force-app/main/default/objects/Customer_Information__c/fields/Overseas_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Sales_Unit__c</fullName>
    <label>Overseas Sales Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>