force-app/main/default/objects/Customer_Information__c/fields/Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Number__c</fullName>
    <label>Store Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>