force-app/main/default/objects/Customer_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Overseas_Sales_Unit__c</columns>
    <columns>Customer_Code__c</columns>
    <columns>Customer_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>